src/lexer/snapshots/enderpy__lexer__lexer__tests__test-lexer-9.snap
---
source: src/lexer/lexer.rs
description: "."
---
[
    Token {
        kind: Dot,
        value: None,
        start: 0,
        end: 1,
    },
]
