src/lexer/snapshots/enderpy__lexer__lexer__tests__unicode-string-literals-0.snap
---
source: src/lexer/lexer.rs
description: "u\"hello\""
---
[
    Token {
        kind: Unicode,
        value: Str(
            "u\"hello\"",
        ),
        start: 0,
        end: 8,
    },
]
